samples/_failures_safe/1761412971_fa6bf8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecc01edf.c: In function ‘main’:
./samples/SAFE/__tmp_ecc01edf.c:158:17: error: expected expression at end of input
  158 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_ecc01edf.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ecc01edf.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ecc01edf.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ecc01edf.c:158:17: error: expected declaration or statement at end of input
